tests/errors/test_switch_case_parse_error.mob
// A parse error inside a switch case body must fail cleanly, not segfault
// (parse_switch_case dereferenced the NULL statement). Expected failure.
switch (1) { case is int64: print("a") default: print("b") }
